bugfix: 피드 관련 테스트 코드 수정